@@ -239,13 +239,6 @@ require([
 
     ticket_DataGrid_updater();
 
-
-    aspect.after(this, "resize", function () {
-        console.log('ticket_DataGrid.resize();');
-        ticket_DataGrid.resize();
-    });
-
-
 });
 </script>
 
