@@ -31,11 +31,10 @@
 
 <script type='text/javascript'>
 require([
-    "dojo/_base/declare",
+    'dojo/_base/declare',
     'dojo/data/ObjectStore',
     'dojo/store/Memory',
     'dojo/store/JsonRest',
-    'dojo/aspect',
 
     "dgrid/selector",
     "dgrid/List",
@@ -55,7 +54,7 @@ require([
     'stalker/dialogCreator',
 
     'dojo/domReady!'
-], function (declare, ObjectStore, Memory, JsonRest, aspect, selector, List,
+], function (declare, ObjectStore, Memory, JsonRest, selector, List,
              Grid, Selection, Keyboard, ColumnResizer, editor, Menu, MenuItem,
              MenuSeparator, Button, dialogs, dialogCaller, dialogCreator) {
 
@@ -65,7 +64,6 @@ require([
     var time_logs_DataGrid = new StandardGrid({
         id: 'time_logs_data_grid',
         width: '100%',
-        {#            autoHeight: true,#}
         selectionMode: 'single',
         cellNavigation: false,
         allowSelectAll: true
@@ -223,13 +221,6 @@ require([
     }
 
     time_logs_DataGrid_updater();
-
-
-    aspect.after(this, "resize", function () {
-        console.log('time_logs_DataGrid.resize();');
-        time_logs_DataGrid.resize();
-    });
-
 
 });
 </script>
