@@ -25,6 +25,7 @@ Stalker Pyramid Changes
 * **Update:** GanttColumn now scrolls to the desired date so that the date will
   be in the middle of the view.
 * **Update:** GanttColumn now shows the width of the days/weeks correctly.
+* **New:** References are now shown in a dojox.image.LightBox dialog.
 
 0.1.0.b2
 ========
